# rig-mcp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  justfile  release-plz.toml
.github/workflows/: ci.yml
examples/: harness_record.rs
examples/common/: harness_record.rs
src/: cache_tools.rs  lib.rs  replay.rs  result_cache.rs  stdio.rs  transport.rs
tests/: harness.rs  result_envelope.rs  stdio_failures.rs
