[package]
name = "rig-mcp"
version = "0.2.5"
edition = "2024"
rust-version = "1.88"
authors = ["Azreal Contributors"]
description = "Model Context Protocol bridge for rig-compose tool registries. Wraps the official `rmcp` SDK with rig-compose's transport-agnostic Tool surface."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForeverAngry/rig-mcp"
readme = "README.md"
keywords = ["rig", "mcp", "rmcp", "agent", "ai"]
categories = ["asynchronous"]

[features]
default = ["stdio"]
# Enables the production child-process stdio transport (`StdioTransport`,
# `serve_stdio`). Pulls `tokio` and the matching `rmcp` transport features.
# Turn this off to use `rig-mcp` purely through `McpTransport` /
# `LoopbackTransport` / `McpTool` without a hard tokio dependency.
stdio = ["dep:tokio", "rmcp/transport-io", "rmcp/transport-child-process"]

[dependencies]
rig-compose = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "io-std", "time"], optional = true }
tracing = "0.1"
# Official Model Context Protocol SDK. We disable defaults and opt into
# only the client + server + macros base; stdio transports are pulled in
# additively via the `stdio` feature so the no-default-features build stays
# tokio-free.
rmcp = { version = "1.6", default-features = false, features = [
    "client",
    "server",
    "macros",
] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "io-std", "time"] }

[[bin]]
name = "rig_mcp_stdio_fixture"
required-features = ["stdio"]

[lints.clippy]
dbg_macro = "forbid"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
expect_used = "deny"
expect_fun_call = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "forbid"
unimplemented = "forbid"
unreachable = "deny"
unwrap_used = "deny"

[profile.release]
lto = true
opt-level = "s"
